--- a/src/components/Mission.astro
+++ b/src/components/Mission.astro
@@ -187,6 +187,7 @@ import GridWrapper from "./GridWrapper.astro";
     font-size: 4.875rem;
     line-height: 1.25;
     margin-bottom: 8.375rem;
+    transform: translateX(-0.35vw);
   }
   .paragraph {
     font-size: 1.25rem;
