--- a/src/components/Partnership.astro
+++ b/src/components/Partnership.astro
@@ -66,6 +66,7 @@ import figure from "../assets/triangle.avif";
     font-size: 4.875rem;
     line-height: 1.25;
     margin-bottom: 10rem;
+    transform: translateX(-0.3vw);
   }
   .number {
     letter-spacing: 0.25rem;
