--- a/src/components/Solution.astro
+++ b/src/components/Solution.astro
@@ -288,6 +288,7 @@ import CardImage8 from "../assets/hector-ramon-perez-sjAtGCs6VXs-unsplash.avif";
     font-size: 3.75rem;
     line-height: 1.25;
     margin-bottom: 6.5rem;
+    transform: translateX(-0.3vw);
   }
   .paragraph {
     font-size: 1.25rem;
