--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -116,6 +116,7 @@ import GridWrapper from "./GridWrapper.astro";
     grid-column: 1 / span 1;
     margin-top: 3.375rem;
     margin-bottom: 2.625rem;
+    transform: translateX(0.3vw);
   }
   .address {
     font-family: "jost", sans-serif;
@@ -123,12 +124,14 @@ import GridWrapper from "./GridWrapper.astro";
     line-height: 1.5;
     grid-column: 1 / span 3;
     margin-bottom: 10.5rem;
+    transform: translateX(0.3vw);
   }
   ul {
     display: flex;
     justify-content: space-between;
     grid-column: 1 / span 7;
     margin-bottom: 10.5rem;
+    transform: translateX(0.3vw);
   }
   li {
     font-family: "jost", sans-serif;
