--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -105,10 +105,26 @@ import GridWrapper from "./GridWrapper.astro";
 
 <style>
   footer {
-    max-width: 1800px;
-    background-color: black;
-    color: hsl(0, 0%, 95%);
-    font-size: 1rem;
+    width: 100%;
+    background-color: var(--color-black);
+    color: var(--color-white);
+    font-size: var(--clamp);
+    --clamp-viewport-min: 320;
+    --clamp-viewport-max: 768;
+    --clamp-min: 12;
+    --clamp-max: 15;
+    @media (min-width: 768px) {
+      --clamp-viewport-min: 768;
+      --clamp-viewport-max: 1024;
+      --clamp-min: 15;
+      --clamp-max: 16;
+    }
+    @media (min-width: 1024px) {
+      --clamp-viewport-min: 1280;
+      --clamp-viewport-max: 2560;
+      --clamp-min: 16;
+      --clamp-max: 32;
+    }
   }
   .category {
     font-family: "jost", sans-serif;
@@ -123,15 +139,31 @@ import GridWrapper from "./GridWrapper.astro";
     font-weight: 500;
     line-height: 1.5;
     grid-column: 1 / span 3;
-    margin-bottom: 10.5rem;
+    margin-bottom: 7.5rem;
     transform: translateX(0.3vw);
+    @media (min-width: 768px) {
+      margin-bottom: 10.5rem;
+    }
+    @media (min-width: 1024px) {
+    }
+    margin-bottom: 10.5rem;
   }
   ul {
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
     grid-column: 1 / span 7;
-    margin-bottom: 10.5rem;
+    gap: 1rem;
+    margin-bottom: 7.5rem;
     transform: translateX(0.3vw);
+    @media (min-width: 768px) {
+      flex-direction: row;
+      margin-bottom: 10.5rem;
+    }
+    @media (min-width: 1024px) {
+      flex-direction: row;
+      margin-bottom: 10.5rem;
+    }
   }
   li {
     font-family: "jost", sans-serif;
@@ -142,9 +174,15 @@ import GridWrapper from "./GridWrapper.astro";
     transition: color 0.3s;
   }
   a:hover {
-    color: hsl(45, 100%, 50%);
+    color: var(--color-hover);
   }
   .image-wrapper {
-    grid-column: 1 / span 4;
+    grid-column: 1 / span 8;
+    @media (min-width: 768px) {
+      grid-column: 1 / span 4;
+    }
+    @media (min-width: 1024px) {
+      grid-column: 1 / span 4;
+    }
   }
 </style>
