--- a/src/components/Mission.astro
+++ b/src/components/Mission.astro
@@ -8,17 +8,16 @@ import GridWrapper from "./GridWrapper.astro";
       <p class="category">Our <span class="color">mission</span></p>
       <h2 class="headline">絶え間なく<br />宇宙を<br />照らし続ける</h2>
       <p class="paragraph">
-        <span class="bg-line">私たちは太陽系の中心にある存在として、</span><br
-        />
+        <span class="bg-line">私たちは太陽系の中心にある存在として、</span>
         <span class="bg-line"
           >太陽系に不可欠なエネルギーと重力の安定を提供しています。</span
-        ><br />
+        >
         <span class="bg-line"
           >革新的な核融合技術を通じて、生命と惑星の営みを</span
-        ><br />
+        >
         <span class="bg-line"
           >持続可能な方法で支えることが私たちの使命です。</span
-        ><br />
+        >
       </p>
     </div>
     <div class="picture-wrapper">
@@ -167,44 +166,132 @@ import GridWrapper from "./GridWrapper.astro";
   .text-wrapper {
     display: flex;
     flex-direction: column;
-    grid-column: 2 / span 3;
-    padding-top: 7rem;
+    grid-column: 1 / span 8;
+    --clamp-viewport-min: 320;
+    --clamp-viewport-max: 768;
+    --clamp-min: 45;
+    --clamp-max: 108;
+    padding-top: var(--clamp);
     color: hsl(0, 0%, 25%);
+    @media (min-width: 768px) {
+      grid-column: 2 / span 5;
+      --clamp-viewport-min: 768;
+      --clamp-viewport-max: 1024;
+      --clamp-min: 108;
+      --clamp-max: 144;
+    }
+    @media (min-width: 1024px) {
+      grid-column: 2 / span 3;
+      --clamp-viewport-min: 1280;
+      --clamp-viewport-max: 2560;
+      --clamp-min: 104;
+      --clamp-max: 208;
+    }
   }
   .category {
-    font-size: 2.25rem;
+    --clamp-viewport-min: 320;
+    --clamp-viewport-max: 767;
+    --clamp-min: 18;
+    --clamp-max: 24;
+    font-size: var(--clamp);
     font-family: "cormorant garamond", serif;
     font-weight: 500;
     margin-bottom: 1rem;
+    @media (min-width: 768px) {
+      --clamp-viewport-min: 768;
+      --clamp-viewport-max: 1024;
+      --clamp-min: 26;
+      --clamp-max: 34;
+    }
+    @media (min-width: 1024px) {
+      --clamp-viewport-min: 1280;
+      --clamp-viewport-max: 2560;
+      --clamp-min: 24;
+      --clamp-max: 48;
+    }
     & .color {
       color: hsl(340, 100%, 50%);
     }
   }
   .headline {
+    --clamp-viewport-min: 320;
+    --clamp-viewport-max: 768;
+    --clamp-min: 32;
+    --clamp-max: 60;
     color: hsl(340, 100%, 50%);
     font-family: "shippori mincho", serif;
     font-weight: 400;
-    font-size: 4.875rem;
+    font-size: var(--clamp);
     line-height: 1.25;
-    margin-bottom: 8.375rem;
+    margin-bottom: 2.875em;
     transform: translateX(-0.35vw);
+    @media (min-width: 768px) {
+      --clamp-viewport-min: 768;
+      --clamp-viewport-max: 1024;
+      --clamp-min: 60;
+      --clamp-max: 80;
+      margin-bottom: 2.375em;
+    }
+    @media (min-width: 1024px) {
+      --clamp-viewport-min: 1280;
+      --clamp-viewport-max: 2560;
+      --clamp-min: 60;
+      --clamp-max: 120;
+      margin-bottom: 2.375em;
+    }
   }
   .paragraph {
-    font-size: 1.25rem;
+    font-size: var(--clamp);
+    --clamp-viewport-min: 320;
+    --clamp-viewport-max: 768;
+    --clamp-min: 14;
+    --clamp-max: 16;
     font-family: "noto sans", sans-serif;
     font-weight: 500;
     line-height: 1.9;
-    padding-bottom: 9rem;
+    padding-bottom: 6.375em;
     letter-spacing: 0.05rem;
-    word-break: keep-all;
+    @media (min-width: 768px) {
+      --clamp-viewport-min: 768;
+      --clamp-viewport-max: 1024;
+      --clamp-min: 16;
+      --clamp-max: 22;
+      padding-bottom: 8.375em;
+      word-break: keep-all;
+    }
+    @media (min-width: 1024px) {
+      --clamp-viewport-min: 1280;
+      --clamp-viewport-max: 2560;
+      --clamp-min: 16;
+      --clamp-max: 32;
+      padding-bottom: 8.375em;
+      word-break: keep-all;
+    }
   }
+
   .picture-wrapper {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 55.5rem;
+    --clamp-viewport-min: 320;
+    --clamp-viewport-max: 767;
+    --clamp-min: 300;
+    --clamp-max: 673;
+    width: var(--clamp);
     z-index: -1;
+    @media (min-width: 768px) {
+      --clamp-viewport-min: 768;
+      --clamp-viewport-max: 1024;
+      --clamp-min: 673;
+      --clamp-max: 896;
+    }
+    @media (min-width: 1024px) {
+      --clamp-viewport-min: 1280;
+      --clamp-viewport-max: 2560;
+      --clamp-min: 896;
+      --clamp-max: 1792;
+    }
   }
   /* .bg-line {
     background-color: hsl(60, 100%, 98%);
