--- a/src/components/Solution.astro
+++ b/src/components/Solution.astro
@@ -31,11 +31,10 @@ import CardImage8 from "../assets/hector-ramon-perez-sjAtGCs6VXs-unsplash.avif";
       <p class="number">1</p>
       <h2 class="headline">光</h2>
       <p class="paragraph">
-        <span class="bg-line">私たちの光は、</span><br />
-        <span class="bg-line">休むことなく世界を明るく照らし続けます。</span><br
-        />
-        <span class="bg-line">私たちがもたらす光は、</span><br />
-        <span class="bg-line">一日を明るくするだけでなく、</span><br />
+        <span class="bg-line">私たちの光は、</span>
+        <span class="bg-line">休むことなく世界を明るく照らし続けます。</span>
+        <span class="bg-line">私たちがもたらす光は、</span>
+        <span class="bg-line">一日を明るくするだけでなく、</span>
         <span class="bg-line">地球上の生命の未来を照らし出します。</span>
       </p>
     </div>
@@ -67,12 +66,10 @@ import CardImage8 from "../assets/hector-ramon-perez-sjAtGCs6VXs-unsplash.avif";
         <h3 class="card__title">光合成サポート</h3>
         <p class="card__tag">Illumination</p>
         <p class="card__paragraph">
-          <span class="card__bg-line"
-            >植物の成長に最適化された光の波長を提供し、
-          </span><br />
-          <span class="card__bg-line"
-            >地球規模の食物連鎖と酸素生産を支えています。</span
-          >
+          <span class="card__bg-line">植物の成長に最適化された </span><br />
+          <span class="card__bg-line">光の波長を提供し、 </span><br />
+          <span class="card__bg-line">地球規模の食物連鎖と</span><br />
+          <span class="card__bg-line">酸素生産を支えています。 </span>
         </p>
       </div></Card
     >
@@ -87,9 +84,8 @@ import CardImage8 from "../assets/hector-ramon-perez-sjAtGCs6VXs-unsplash.avif";
         <h3 class="card__title">高度な視覚強化</h3>
         <p class="card__tag">Illumination</p>
         <p class="card__paragraph">
-          <span class="card__bg-line"
-            >生物の視覚システムに最適なスペクトルを提供し、</span
-          ><br />
+          <span class="card__bg-line">生物の視覚システムに</span><br />
+          <span class="card__bg-line">最適なスペクトルを提供し、</span><br />
           <span class="card__bg-line">動物界全体のナビゲーションや</span><br />
           <span class="card__bg-line"> 社会的相互作用を促進します。</span>
         </p>
@@ -108,9 +104,8 @@ import CardImage8 from "../assets/hector-ramon-perez-sjAtGCs6VXs-unsplash.avif";
         <p class="card__paragraph">
           <span class="card__bg-line">私たちの光は機能的なだけでなく、</span><br
           />
-          <span class="card__bg-line"
-            >自然な気分向上効果があり、幸福感を促進し、</span
-          ><br />
+          <span class="card__bg-line">自然な気分向上効果があり、</span><br />
+          <span class="card__bg-line">幸福感を促進し、</span><br />
           <span class="card__bg-line">体内時計を調整します。</span>
         </p>
       </div></Card
@@ -128,15 +123,13 @@ import CardImage8 from "../assets/hector-ramon-perez-sjAtGCs6VXs-unsplash.avif";
       <p class="number">2</p>
       <h2 class="headline">熱</h2>
       <p class="paragraph">
-        <span class="bg-line"
-          >核融合反応から生まれた太陽放射によって、
-        </span><br />
-        <span class="bg-line">地球にもたらされた熱は、</span><br />
+        <span class="bg-line">核融合反応から生まれた太陽放射によって、 </span>
+        <span class="bg-line">地球にもたらされた熱は、</span>
         <span class="bg-line"
           >地球のエネルギーバランスの中核を担っています。</span
-        ><br />
-        <span class="bg-line">私たちがもたらす熱は、</span><br />
-        <span class="bg-line">単に惑星を温めるだけでなく、</span><br />
+        >
+        <span class="bg-line">私たちがもたらす熱は、</span>
+        <span class="bg-line">単に惑星を温めるだけでなく、</span>
         <span class="bg-line">生命そのものの原動力となっています。</span>
       </p>
     </div>
@@ -153,9 +146,8 @@ import CardImage8 from "../assets/hector-ramon-perez-sjAtGCs6VXs-unsplash.avif";
         <p class="card__paragraph">
           <span class="card__bg-line">地球の気候システムの原動力となり、</span
           ><br />
-          <span class="card__bg-line"
-            >多様な生命体が生息可能な温度範囲を確保します。</span
-          >
+          <span class="card__bg-line">多様な生命体が生息可能な</span><br />
+          <span class="card__bg-line">温度範囲を確保します。</span>
         </p>
       </div></Card
     >
@@ -174,9 +166,8 @@ import CardImage8 from "../assets/hector-ramon-perez-sjAtGCs6VXs-unsplash.avif";
             >熱の分配により、地球規模の風系や
           </span><br />
           <span class="card__bg-line">気象システムを駆動し、</span><br />
-          <span class="card__bg-line"
-            >地球の水循環に不可欠な役割を果たします。</span
-          >
+          <span class="card__bg-line">地球の水循環に</span><br />
+          <span class="card__bg-line">不可欠な役割を果たします。</span>
         </p>
       </div></Card
     >
@@ -242,9 +233,14 @@ import CardImage8 from "../assets/hector-ramon-perez-sjAtGCs6VXs-unsplash.avif";
     padding-bottom: 3rem;
   }
   .category {
-    font-size: 12rem;
+    --clamp-viewport-min: 320;
+    --clamp-viewport-max: 767;
+    --clamp-min: 50;
+    --clamp-max: 101;
+    font-size: var(--clamp);
     font-family: "cormorant garamond", serif;
     font-weight: 700;
+    text-align: center;
     grid-column: 1 / span 8;
     justify-self: center;
     align-self: center;
@@ -253,14 +249,41 @@ import CardImage8 from "../assets/hector-ramon-perez-sjAtGCs6VXs-unsplash.avif";
     & .color {
       color: hsl(340, 100%, 50%);
     }
+    @media (min-width: 768px) {
+      --clamp-viewport-min: 768;
+      --clamp-viewport-max: 1024;
+      --clamp-min: 101;
+      --clamp-max: 134;
+    }
+    @media (min-width: 1024px) {
+      --clamp-viewport-min: 1280;
+      --clamp-viewport-max: 2560;
+      --clamp-min: 168;
+      --clamp-max: 336;
+      padding-top: 0.5em;
+    }
   }
   .picture-wrapper {
-    grid-column: 2 / span 3;
-    grid-row: 2 / span 5;
+    grid-column: 1 / span 8;
+    @media (min-width: 768px) {
+      grid-column: 2 / span 3;
+      grid-row: 2 / span 5;
+    }
+    @media (min-width: 1024px) {
+      grid-column: 2 / span 3;
+      grid-row: 2 / span 5;
+    }
   }
   .picture-wrapper-2 {
-    grid-column: 2 / span 3;
-    grid-row: 7 / span 5;
+    grid-column: 1 / span 8;
+    @media (min-width: 768px) {
+      grid-column: 2 / span 3;
+      grid-row: 7 / span 5;
+    }
+    @media (min-width: 1024px) {
+      grid-column: 2 / span 3;
+      grid-row: 7 / span 5;
+    }
   }
   .earth {
     width: 100%;
@@ -271,75 +294,222 @@ import CardImage8 from "../assets/hector-ramon-perez-sjAtGCs6VXs-unsplash.avif";
   .text-wrapper {
     display: flex;
     flex-direction: column;
-    grid-column: 5 / span 3;
-    padding-top: 5rem;
-    color: hsl(0, 0%, 25%);
+    grid-column: 2 / span 6;
+    padding-top: var(--clamp);
+    --clamp-viewport-min: 320;
+    --clamp-viewport-max: 768;
+    --clamp-min: 20;
+    --clamp-max: 44;
+    color: var(--color-black-mild);
+    @media (min-width: 768px) {
+      grid-column: 5 / span 3;
+      --clamp-viewport-min: 768;
+      --clamp-viewport-max: 1024;
+      --clamp-min: 60;
+      --clamp-max: 80;
+    }
+    @media (min-width: 1024px) {
+      grid-column: 5 / span 3;
+      --clamp-viewport-min: 1280;
+      --clamp-viewport-max: 2560;
+      --clamp-min: 84;
+      --clamp-max: 168;
+    }
   }
   .number {
-    font-size: 2rem;
+    font-size: var(--clamp);
+    --clamp-viewport-min: 320;
+    --clamp-viewport-max: 767;
+    --clamp-min: 20;
+    --clamp-max: 24;
     font-family: "shippori mincho", serif;
     font-weight: 400;
-    margin-bottom: 1rem;
+    text-align: center;
+    margin-bottom: 0.5em;
+    @media (min-width: 768px) {
+      text-align: left;
+      --clamp-viewport-min: 768;
+      --clamp-viewport-max: 1024;
+      --clamp-min: 24;
+      --clamp-max: 28;
+    }
+    @media (min-width: 1024px) {
+      text-align: left;
+      --clamp-viewport-min: 1280;
+      --clamp-viewport-max: 2560;
+      --clamp-min: 32;
+      --clamp-max: 64;
+    }
   }
   .headline {
     color: hsl(340, 100%, 50%);
     font-family: "shippori mincho", serif;
     font-weight: 400;
-    font-size: 3.75rem;
+    font-size: var(--clamp);
+    --clamp-viewport-min: 320;
+    --clamp-viewport-max: 767;
+    --clamp-min: 32;
+    --clamp-max: 40;
     line-height: 1.25;
-    margin-bottom: 6.5rem;
-    transform: translateX(-0.3vw);
+    text-align: center;
+    margin-bottom: 2.3em;
+    @media (min-width: 768px) {
+      transform: translateX(-0.3vw);
+      text-align: left;
+      --clamp-viewport-min: 768;
+      --clamp-viewport-max: 1024;
+      --clamp-min: 40;
+      --clamp-max: 53;
+      margin-bottom: 1.58em;
+    }
+    @media (min-width: 1024px) {
+      transform: translateX(-0.3vw);
+      text-align: left;
+      --clamp-viewport-min: 1280;
+      --clamp-viewport-max: 2560;
+      --clamp-min: 48;
+      --clamp-max: 96;
+      margin-bottom: 1.58em;
+    }
   }
   .paragraph {
-    font-size: 1.25rem;
+    font-size: var(--clamp);
+    --clamp-viewport-min: 320;
+    --clamp-viewport-max: 768;
+    --clamp-min: 14;
+    --clamp-max: 16;
     font-family: "noto sans", sans-serif;
     font-weight: 500;
     line-height: 1.9;
-    padding-bottom: 9rem;
+    padding-bottom: 9em;
     letter-spacing: 0.05rem;
+    @media (min-width: 768px) {
+      --clamp-viewport-min: 768;
+      --clamp-viewport-max: 1024;
+      --clamp-min: 16;
+      --clamp-max: 22;
+      padding-bottom: 4em;
+    }
+    @media (min-width: 1024px) {
+      --clamp-viewport-min: 1280;
+      --clamp-viewport-max: 2560;
+      --clamp-min: 16;
+      --clamp-max: 32;
+      word-break: keep-all;
+      padding-bottom: 6em;
+    }
   }
   /* .bg-line {
     background-color: hsl(60, 100%, 98%);
   } */
   .card__text-wrapper {
+    --clamp-viewport-min: 320;
+    --clamp-viewport-max: 768;
+    --clamp-min: 16;
+    --clamp-max: 18;
+    font-size: var(--clamp);
     display: flex;
     flex-direction: column;
     width: max-content;
-    color: hsl(0, 0%, 25%);
+    color: var(--color-black-mild);
     z-index: 10;
-    padding: 5rem 2.6rem;
+    padding: 4em 2em;
+    @media (min-width: 768px) {
+      --clamp-viewport-min: 768;
+      --clamp-viewport-max: 1024;
+      --clamp-min: 16;
+      --clamp-max: 18;
+      padding: 2.5em 1.5em;
+    }
+    @media (min-width: 1024px) {
+      --clamp-viewport-min: 1280;
+      --clamp-viewport-max: 2560;
+      --clamp-min: 18;
+      --clamp-max: 36;
+      padding: 4em 2em;
+    }
   }
   .card__title {
-    font-size: 1.375rem;
+    --clamp-viewport-min: 320;
+    --clamp-viewport-max: 768;
+    --clamp-min: 16;
+    --clamp-max: 24;
+    font-size: var(--clamp);
     font-family: "noto sans", sans-serif;
     font-weight: 500;
-    margin-bottom: 0.75rem;
+    margin-bottom: 0.75em;
     width: min-content;
-    background-color: hsl(60, 100%, 98%);
-    padding: 0 0.3rem;
-    border-radius: 0.3rem;
+    background-color: var(--color-white-warm);
+    padding: 0 0.3em;
+    border-radius: 0.3em;
     word-break: keep-all;
+    @media (min-width: 768px) {
+      --clamp-viewport-min: 768;
+      --clamp-viewport-max: 1024;
+      --clamp-min: 16;
+      --clamp-max: 18;
+    }
+    @media (min-width: 1024px) {
+      --clamp-viewport-min: 1280;
+      --clamp-viewport-max: 2560;
+      --clamp-min: 18;
+      --clamp-max: 36;
+    }
   }
   .card__tag {
-    color: hsl(0, 0%, 20%);
+    --clamp-viewport-min: 320;
+    --clamp-viewport-max: 768;
+    --clamp-min: 12;
+    --clamp-max: 18;
+    font-size: var(--clamp);
+    color: var(--color-black-mild);
     font-family: "jost", sans-serif;
-    background-color: hsl(50, 100%, 70%);
+    background-color: var(--color-tag-yellow);
     width: min-content;
-    border-radius: 1rem;
-    padding: 0 0.5rem;
-    margin-bottom: 2.4rem;
+    border-radius: 1em;
+    padding: 0 0.5em;
+    margin-bottom: 2.4em;
+    @media (min-width: 768px) {
+      --clamp-viewport-min: 768;
+      --clamp-viewport-max: 1024;
+      --clamp-min: 12;
+      --clamp-max: 14;
+    }
+    @media (min-width: 1024px) {
+      --clamp-viewport-min: 1280;
+      --clamp-viewport-max: 2560;
+      --clamp-min: 14;
+      --clamp-max: 28;
+    }
   }
   .card__tag--walm {
-    background-color: hsl(20, 100%, 70%);
+    background-color: var(--color-tag-orange);
   }
   .card__paragraph {
+    --clamp-viewport-min: 320;
+    --clamp-viewport-max: 768;
+    --clamp-min: 12;
+    --clamp-max: 20;
+    font-size: var(--clamp);
     font-family: "noto sans", sans-serif;
     font-weight: 500;
     line-height: 2;
     letter-spacing: 0.03rem;
+    @media (min-width: 768px) {
+      --clamp-viewport-min: 768;
+      --clamp-viewport-max: 1024;
+      --clamp-min: 14;
+      --clamp-max: 16;
+    }
+    @media (min-width: 1024px) {
+      --clamp-viewport-min: 1280;
+      --clamp-viewport-max: 2560;
+      --clamp-min: 16;
+      --clamp-max: 32;
+    }
   }
   .card__bg-line {
-    background-color: hsl(60, 100%, 98%);
+    background-color: var(--color-white-warm);
     padding: 0 0.3rem;
     border-radius: 0.3rem;
   }
