--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -11,19 +11,47 @@ const { src, alt, width, height, className } = Astro.props;
 <style>
   .card {
     display: grid;
-    aspect-ratio: 5 / 6;
+    aspect-ratio: 3 / 4;
     position: relative;
     align-content: end;
+    @media (min-width: 768px) {
+      aspect-ratio: 3 / 4;
+    }
+    @media (min-width: 1024px) {
+      aspect-ratio: 5 / 6;
+    }
   }
   .card-position1 {
-    grid-column: 5 / span 3;
+    grid-column: 1 / span 8;
     margin-bottom: 3rem;
+    @media (min-width: 768px) {
+      grid-column: 5 / span 4;
+    }
+    @media (min-width: 1024px) {
+      grid-column: 5 / span 3;
+    }
   }
   .image {
     position: absolute;
     width: 100%;
     height: 100%;
     object-fit: cover;
-    border-radius: 3rem;
+    border-radius: var(--clamp);
+    --clamp-viewport-min: 320;
+    --clamp-viewport-max: 767;
+    --clamp-min: 24;
+    --clamp-max: 32;
+    @media (min-width: 768px) {
+      --clamp-viewport-min: 768;
+      --clamp-viewport-max: 1024;
+      --clamp-min: 16;
+      --clamp-max: 20;
+    }
+    @media (min-width: 1024px) {
+      --clamp-viewport-min: 768;
+      --clamp-viewport-max: 1024;
+      --clamp-min: 20;
+      --clamp-max: 40;
+    }
   }
 </style>
