--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -29,9 +29,16 @@
   font-weight: 700;
   font-display: swap;
 }
-@font-face {
+/* @font-face {
   font-family: "shippori mincho";
   src: url("/sunshine-solutions/fonts/shippori-mincho-v14-japanese-regular.woff2")
+    format("woff2");
+  font-weight: 400;
+  font-display: swap;
+} */
+@font-face {
+  font-family: "shippori mincho";
+  src: url("/sunshine-solutions/fonts/shippori-regular-subset.woff2")
     format("woff2");
   font-weight: 400;
   font-display: swap;
