--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,9 +5,6 @@ import "../styles/global.css";
 import Mission from "../components/Mission.astro";
 import Solution from "../components/Solution.astro";
 import ImageSection from "../components/ImageSection.astro";
-import Image1 from "../assets/darren-bockman-pN3Z2usSIQw-unsplash.avif";
-import Image2 from "../assets/frank-mckenna-OD9EOzfSOh0-unsplash.avif";
-import Image3 from "../assets/john-cameron-jVqW-d6GZ2U-unsplash.avif";
 import Partnership from "../components/Partnership.astro";
 import Footer from "../components/Footer.astro";
 import ButtonMenu from "../components/ButtonMenu.astro";
@@ -20,11 +17,17 @@ import Loading from "../components/Loading.astro";
   <main class="main">
     <Hero />
     <Mission />
-    <ImageSection src={Image1} alt="森に日光が差し込む風景" />
+    <ImageSection
+      src="/sunshine-solutions/images/section1"
+      alt="森に日光が差し込む風景"
+    />
     <Solution />
-    <ImageSection src={Image2} alt="海辺の風景" />
+    <ImageSection src="/sunshine-solutions/images/section2" alt="海辺の風景" />
     <Partnership />
-    <ImageSection src={Image3} alt="上空から眺める海の風景" />
+    <ImageSection
+      src="/sunshine-solutions/images/section3"
+      alt="上空から眺める海の風景"
+    />
   </main>
   <Footer />
 </Layout>
