--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,10 +1,23 @@
 ---
 import { Image } from "astro:assets";
-const { src, alt, width, height, className } = Astro.props;
+const { src, alt, className } = Astro.props;
 ---
 
 <div class=`card ${className}`>
-  <Image src={src} alt={alt} width={width} height={height} class="image" />
+  <picture class="image">
+    <source
+      media="(min-width: 1024px)"
+      srcset=`${src}-l.avif 2000w,${src}.avif 1000w`
+      sizes="calc(100vw - 940px)"
+      type="image/avif"
+    />
+    <source
+      media="(max-width: 1023px)"
+      srcset=`${src}.avif`
+      type="image/avif"
+    />
+    <img src=`${src}.jpg` alt={alt} width="1000" height="1333" loading="lazy" />
+  </picture>
   <slot />
 </div>
 
@@ -31,8 +44,10 @@ const { src, alt, width, height, className } = Astro.props;
       grid-column: 5 / span 3;
     }
   }
-  .image {
+  .image img {
     position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     object-fit: cover;
