--- a/src/components/Solution.astro
+++ b/src/components/Solution.astro
@@ -1,30 +1,20 @@
 ---
 import GridWrapper from "./GridWrapper.astro";
-import { Image } from "astro:assets";
 import lightedEarth from "../assets/lighted earth.avif";
 import heatedEarth from "../assets/heated earth.avif";
-
 import Card from "./Card.astro";
-import CardImage1 from "../assets/lukas-smith-d7q9-L_eWYg-unsplash.avif";
-import CardImage2 from "../assets/kumiko-shimizu-NZrsM6_i0ww-unsplash.avif";
-import CardImage3 from "../assets/harshil-gudka-pU-9BYqjhyo-unsplash.avif";
-import CardImage4 from "../assets/oshadha-viduranga-JFIE7x5lEmE-unsplash.avif";
-import CardImage5 from "../assets/miguel-a-amutio-bQgat1I0hVs-unsplash.avif";
-import CardImage6 from "../assets/noaa-UJsUJr3cgEM-unsplash.avif";
-import CardImage7 from "../assets/samsommer-J3ABLQjZQBg-unsplash.avif";
-import CardImage8 from "../assets/hector-ramon-perez-sjAtGCs6VXs-unsplash.avif";
 ---
 
 <section id="solutions">
   <GridWrapper>
     <h2 class="category">Our <span class="color">Solutions</span></h2>
     <div class="picture-wrapper">
-      <Image
-        src={lightedEarth}
-        width="1200"
-        height="1200"
+      <img
+        src="/sunshine-solutions/images/lighted-earth.avif"
         alt="光に照らされた地球"
         class="earth"
+        width="2000"
+        height="2000"
       />
     </div>
     <div class="text-wrapper">
@@ -39,10 +29,8 @@ import CardImage8 from "../assets/hector-ramon-perez-sjAtGCs6VXs-unsplash.avif";
       </p>
     </div>
     <Card
-      src={CardImage1}
+      src="/sunshine-solutions/images/card1"
       alt="上空から見た風景"
-      width="1000"
-      height="1200"
       className="card-position1"
     >
       <div class="card__text-wrapper">
@@ -56,10 +44,8 @@ import CardImage8 from "../assets/hector-ramon-perez-sjAtGCs6VXs-unsplash.avif";
       </div>
     </Card>
     <Card
-      src={CardImage2}
+      src="/sunshine-solutions/images/card2"
       alt="光を透過する葉っぱ"
-      width="1000"
-      height="1200"
       className="card-position1"
     >
       <div class="card__text-wrapper">
@@ -74,10 +60,8 @@ import CardImage8 from "../assets/hector-ramon-perez-sjAtGCs6VXs-unsplash.avif";
       </div></Card
     >
     <Card
-      src={CardImage3}
+      src="/sunshine-solutions/images/card3"
       alt="草原にキリンがいる風景"
-      width="1000"
-      height="1200"
       className="card-position1"
     >
       <div class="card__text-wrapper">
@@ -92,10 +76,8 @@ import CardImage8 from "../assets/hector-ramon-perez-sjAtGCs6VXs-unsplash.avif";
       </div></Card
     >
     <Card
-      src={CardImage4}
+      src="/sunshine-solutions/images/card4"
       alt="山から眺める見晴らしのいい風景"
-      width="1000"
-      height="1200"
       className="card-position1"
     >
       <div class="card__text-wrapper">
@@ -111,12 +93,12 @@ import CardImage8 from "../assets/hector-ramon-perez-sjAtGCs6VXs-unsplash.avif";
       </div></Card
     >
     <div class="picture-wrapper-2">
-      <Image
-        src={heatedEarth}
-        width="1200"
-        height="1200"
-        alt="熱を帯びた地球"
+      <img
+        src="/sunshine-solutions/images/heated-earth.avif"
+        alt="光に照らされた地球"
         class="earth"
+        width="2000"
+        height="2000"
       />
     </div>
     <div class="text-wrapper">
@@ -134,10 +116,8 @@ import CardImage8 from "../assets/hector-ramon-perez-sjAtGCs6VXs-unsplash.avif";
       </p>
     </div>
     <Card
-      src={CardImage5}
+      src="/sunshine-solutions/images/card5"
       alt="空から眺める雲と草原の風景"
-      width="1000"
-      height="1200"
       className="card-position1"
     >
       <div class="card__text-wrapper">
@@ -152,10 +132,8 @@ import CardImage8 from "../assets/hector-ramon-perez-sjAtGCs6VXs-unsplash.avif";
       </div></Card
     >
     <Card
-      src={CardImage6}
+      src="/sunshine-solutions/images/card6"
       alt="巨大な雲と虹"
-      width="1000"
-      height="1200"
       className="card-position1"
     >
       <div class="card__text-wrapper">
@@ -172,10 +150,8 @@ import CardImage8 from "../assets/hector-ramon-perez-sjAtGCs6VXs-unsplash.avif";
       </div></Card
     >
     <Card
-      src={CardImage7}
+      src="/sunshine-solutions/images/card7"
       alt="空から眺める海"
-      width="1000"
-      height="1200"
       className="card-position1"
       ><div class="card__text-wrapper">
         <h3 class="card__title">海流の活性化</h3>
@@ -190,10 +166,8 @@ import CardImage8 from "../assets/hector-ramon-perez-sjAtGCs6VXs-unsplash.avif";
       </div></Card
     >
     <Card
-      src={CardImage8}
+      src="/sunshine-solutions/images/card8"
       alt="花畑と遠くに山が見える風景"
-      width="1000"
-      height="1200"
       className="card-position1"
     >
       <div class="card__text-wrapper">
